--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="FitHub Logo" class="logo">
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="workouts.html">Workouts</a></li>
-                <li><a href="programs.html">Programs</a></li>
-                <li><a href="coaches.html">Coaches</a></li>
-                <li><a href="faq.html">FAQ</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-        </nav>
+        <div class="header-container">
+            <img src="images/logo.png" alt="FitHub Logo" class="logo">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="workouts.html">Workouts</a></li>
+                    <li><a href="programs.html">Programs</a></li>
+                    <li><a href="coaches.html">Coaches</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <section class="hero">
