phase 1 - final version
phase 1

--- a/faq.html
+++ b/faq.html
@@ -10,13 +10,13 @@
     <header>
         <div class="header-container">
             <img src="images/logo.png" alt="FitHub Logo" class="logo">
+            <button class="menu-toggle" aria-label="Toggle menu">&#9776;</button>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="workouts.html">Workouts</a></li>
                     <li><a href="programs.html">Programs</a></li>
-                    <li><a href="coaches.html">Coaches</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
@@ -26,7 +26,7 @@
 
     <section class="content">
         <h2>Frequently Asked Questions</h2>
-        <p>Got questions? We’ve got answers!</p>
+        <p>Got questions? We’ve got answers!</p> <br>
         <div class="faq-item">
             <h3>What types of workouts do you offer?</h3>
             <p>We offer a variety of workouts including cardio, strength training, flexibility exercises, and more.</p>
@@ -44,5 +44,9 @@
     <footer>
         <p>&copy; 2024 FitHub - All Rights Reserved</p>
     </footer>
+
+       <!-- Link the external JavaScript file -->
+       <script src="scripts.js"></script>
+
 </body>
 </html>
