--- a/about.html
+++ b/about.html
@@ -10,13 +10,13 @@
     <header>
         <div class="header-container">
             <img src="images/logo.png" alt="FitHub Logo" class="logo">
+            <button class="menu-toggle" aria-label="Toggle menu">&#9776;</button>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="workouts.html">Workouts</a></li>
                     <li><a href="programs.html">Programs</a></li>
-                    <li><a href="coaches.html">Coaches</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
@@ -26,11 +26,19 @@
 
     <section class="content">
         <h2>About Us</h2>
-        <p>FitHub is a virtual fitness center dedicated to providing top-quality workout programs and personal training...</p>
+        <div class="content-layout">
+            <div class="text-content">
+                <p>FitHub is a virtual fitness center dedicated to providing top-quality workout programs and personal training...</p>
+            </div>
+            <img src="images/class.webp" alt="class" class="class-image">
+        </div>
     </section>
 
     <footer>
         <p>&copy; 2024 FitHub - All Rights Reserved</p>
     </footer>
+
+    <!-- Link the external JavaScript file -->
+    <script src="scripts.js"></script>
 </body>
 </html>
