--- a/index.html
+++ b/index.html
@@ -10,28 +10,34 @@
     <header>
         <div class="header-container">
             <img src="images/logo.png" alt="FitHub Logo" class="logo">
+            <button class="menu-toggle" aria-label="Toggle menu">&#9776;</button>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="workouts.html">Workouts</a></li>
                     <li><a href="programs.html">Programs</a></li>
-                    <li><a href="coaches.html">Coaches</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+    
 
     <section class="hero">
         <h1>Welcome to FitHub</h1>
         <p>Your virtual fitness center for expert-guided workout programs and personal coaching.</p>
-        <a href="workouts.html" class="cta-button">Start Your Journey</a>
+        <img src="images/topbanner.jpg" alt="Top Banner" class="top-banner">
+       <p> <a href="workouts.html" class="cta-button">Start Your Journey</a></p>
     </section>
 
     <footer>
         <p>&copy; 2024 FitHub - All Rights Reserved</p>
     </footer>
+
+     <!-- Link the external JavaScript file -->
+     <script src="scripts.js"></script>
 </body>
 </html>
+
